@@ -65,4 +65,3 @@ void FCEUD_LoadStateFrom()
 		FCEUI_LoadState(nameo);
 	}
 }
-
